Added file changes to annual report text extraction

--- a/2.Initial_Graph_Building/4.WRDS_data_mapping.ipynb
+++ b/2.Initial_Graph_Building/4.WRDS_data_mapping.ipynb
@@ -3963,7 +3963,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# check later whether the size of the data is fine here"
+   ]
   }
  ],
  "metadata": {
