Got the graph details done, review next steps for graph detection

--- a/2.Initial_Graph_Building/1.5.Univariate_Graph.ipynb
+++ b/2.Initial_Graph_Building/1.5.Univariate_Graph.ipynb
@@ -504,22 +504,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "## Conclusion for the dynamic graph construction\n",
     "\n",
     "based on the same directors and sparse matrices here.\n",
     "\n",
     "get a lot of sparse matrices for these to apply application - need a lot more data to facilitate this!!\n",
     "\n",
     "Hence more years the more memory there will be.\n",
+    "\n",
+    "The details for everything is the samem can use this to define relevant clusters and graph structures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spectral clustering - one year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem here is that you will need to look at deciding what k is for each how to justify it, for the graph structure\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bingfeng93/miniconda3/envs/bayesian/lib/python3.10/site-packages/sklearn/manifold/_spectral_embedding.py:301: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 0, 2, 4, 3, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import SpectralClustering\n",
+    "import numpy as np\n",
+    "\n",
+    "# Select the adjacency matrix for a specific year, e.g., 2023\n",
+    "adj_matrix_2023 = standardized_adj_matrices[2023]\n",
+    "\n",
+    "# Assume we decide to cluster into k groups\n",
+    "k = 5  # The number of clusters to form, you can adjust this based on your specific needs\n",
+    "\n",
+    "# Initialize the Spectral Clustering\n",
+    "spectral = SpectralClustering(n_clusters=k, affinity='precomputed', assign_labels='discretize', random_state=42)\n",
+    "\n",
+    "# Fit the model to the adjacency matrix\n",
+    "# The adjacency matrix should be cast to float as scikit-learn may expect no integers\n",
+    "labels = spectral.fit_predict(adj_matrix_2023.astype(float))\n",
+    "\n",
+    "# We can check the labels to see the clustering result\n",
+    "labels[:10]  # Displaying the first 10 labels as a slice of the results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spectral clustering - Multiple years"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels for 2023: [3 4 0 2 4 3 1 1 1 1 4 0 2 0 0 0 4 4 4 1 1 3 4 0 0 0 2 2 2 2 3 2 1 4 1 0 0\n",
+      " 4 0 2 0 0 0 1 3 4 2 3 4 4 4 4 1 0 2 2 1 1 1 1 1 2 2 4 4 0 4 3 1 4 4 2 3 1\n",
+      " 0 0 1 4 1 0 2 3 0 4 3 4 3 4 0 3 2 0 1 1 2 1 2 3 3 2 2 1 3 2 3 4 4 4 3 1 0\n",
+      " 2 4 3 2 4 4 4 4 1 0 2 4 0 4 3 1 3 4 3 4 2 1 3 4 0 0 0 1 3 1 1 3 1 3 2 0 4\n",
+      " 2 4 4 0 4 0 4 1 3 2 1 0 1 0 4 3 3 0 1 4 4 1 3 4 4 3 1 4 0 0 4 3 1 1 4 2 2\n",
+      " 0 2 2 3 0 3 2 4 4 3 3 1 0 4 3 1 3 4 4 0 3 3 2 2 1 2]\n",
+      "Labels for 2024: [1 0 3 4 2 3 1 2 3 2 3 2 4 4 1 3 3 3 1 3 3 4 2 1 4 1 1 2 1 0 1 4 0 2 0 0 2\n",
+      " 3 0 0 2 3 2 4 0 0 0 1 1 1 0 4 4 0 3 4 3 0 2 2 2 1 0 1 0 0 3 4 1 1 4 1 3 3\n",
+      " 3 4 2 2 0 2 3 1 1 0 1 1 0 2 0 4 4 1 3 3 1 4 1 4 1 2 0 4 0 1 3 2 3 4 1 2 4\n",
+      " 3 2 0 4 1 4 4 1 1 4 1 1 1 2 4 2 1 4 2 3 4 0 3 4 3 3 2 0 0 1 0 1 3 4 0 0 3\n",
+      " 4 0 3 4 2 1 3 2 1 0 3 3 4 1 4 0 2 4 4 3 1 1 2 4 4 1 0 3 4 4 3 3 4 2 2 1 4\n",
+      " 1 2 1 3 4 3 2 1 0 4 0 4 2 3 1 0 0 2 1 2 0 3 3 4 1 0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bingfeng93/miniconda3/envs/bayesian/lib/python3.10/site-packages/sklearn/manifold/_spectral_embedding.py:301: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\n",
+      "/home/bingfeng93/miniconda3/envs/bayesian/lib/python3.10/site-packages/sklearn/manifold/_spectral_embedding.py:301: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import SpectralClustering\n",
+    "import numpy as np\n",
+    "\n",
+    "# Example loading the standardized adjacency matrices for specific years\n",
+    "# Assuming you have a dictionary called standardized_adj_matrices with year keys\n",
+    "years_to_cluster = [2023, 2024]  # Specify the years you want to cluster\n",
+    "\n",
+    "k = 5  # Number of clusters\n",
+    "\n",
+    "for year in years_to_cluster:\n",
+    "    adj_matrix = standardized_adj_matrices[year]  # Load the matrix for the year\n",
+    "    spectral = SpectralClustering(n_clusters=k, affinity='precomputed', assign_labels='discretize', random_state=42)\n",
+    "    labels = spectral.fit_predict(adj_matrix.astype(float))  # Perform clustering\n",
+    "    print(f\"Labels for {year}:\", labels)\n",
+    "\n",
+    "# maybe visualise it.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -552,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
