--- a/2.Initial_Graph_Building/2.More_univarete_graph _test.ipynb
+++ b/2.Initial_Graph_Building/2.More_univarete_graph _test.ipynb
@@ -398,16 +398,16 @@
     "\n",
     "# Assuming graph_simplified_df is already loaded\n",
     "# Step 1: Create a sorted unique company identifier\n",
-    "graph_simplified_df['company'] = graph_simplified_df.apply(\n",
+    "graph_simplified_df['company_pair'] = graph_simplified_df.apply(\n",
     "    lambda row: '-'.join(sorted([str(row['Boardid']), str(row['Companyid'])])),\n",
     "    axis=1\n",
     ")  # 2-3 and 3-2 should be equivalent in graph_simplified_df['company']\n",
     "\n",
     "# Ensure data uniqueness per director per company to avoid inflated pair counts\n",
-    "graph_simplified_df = graph_simplified_df.drop_duplicates(subset=['company', 'Directorid'])\n",
+    "graph_simplified_df = graph_simplified_df.drop_duplicates(subset=['company_pair', 'Directorid'])\n",
     "\n",
     "# Step 2 & 3: Create combinations of directors for each company, only if there are at least two directors\n",
-    "director_pairs = graph_simplified_df.groupby('company')['Directorid'].apply(\n",
+    "director_pairs = graph_simplified_df.groupby('company_pair')['Directorid'].apply(\n",
     "    lambda x: pd.DataFrame(combinations(x.unique(), 2), columns=['Director1', 'Director2']) if len(x) > 1 else pd.DataFrame(columns=['Director1', 'Director2'])\n",
     ").reset_index(drop=True)\n",
     "\n",
@@ -1034,12 +1034,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(betweenness_centrality)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# do relevant workflow for these"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Got the graph details for each one, each one is a dict as long as the node id is there, we can link it to the final regression - which will be useful.\n",
+    "\n",
+    "Almost done - just need to build the graph tomorrow morning.\n",
+    "\n",
+    "Do that with annual years, and functions that's it!!\n",
+    "\n",
+    "\n",
+    "Do this in section 4 for feature generation and work to combine it together\n",
+    "- Use sparse matrices also here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -1058,7 +1098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
