Worked on sparse matrix here

--- a/4. Feature_Generation/1.Full_Company_Interlock_Exploration.ipynb
+++ b/4. Feature_Generation/1.Full_Company_Interlock_Exploration.ipynb
@@ -372,84 +372,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_33932/1099311076.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  graph_simplified_df['company_pair'] = graph_simplified_df.apply(\n",
-      "/tmp/ipykernel_33932/1099311076.py:12: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  director_pairs = graph_simplified_df.groupby('company_pair')['directorid'].apply(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           1026.0     2415.0     3597.0     3637.0     8207.0     9499.0     \\\n",
-      "1026.0           0.0        0.0        0.0        0.0        1.0        0.0   \n",
-      "2415.0           0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "3597.0           0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "3637.0           0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "8207.0           1.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "...              ...        ...        ...        ...        ...        ...   \n",
-      "2704494.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "2709141.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "2709167.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "2714293.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "2777534.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "\n",
-      "           10075.0    10437.0    11536.0    13402.0    ...  2665052.0  \\\n",
-      "1026.0           0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "2415.0           0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "3597.0           0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "3637.0           0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "8207.0           0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "...              ...        ...        ...        ...  ...        ...   \n",
-      "2704494.0        0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "2709141.0        0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "2709167.0        0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "2714293.0        0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "2777534.0        0.0        0.0        0.0        0.0  ...        0.0   \n",
-      "\n",
-      "           2674003.0  2676912.0  2677118.0  2696974.0  2704494.0  2709141.0  \\\n",
-      "1026.0           0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "2415.0           0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "3597.0           0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "3637.0           0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "8207.0           0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "...              ...        ...        ...        ...        ...        ...   \n",
-      "2704494.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "2709141.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "2709167.0        0.0        0.0        0.0        0.0        0.0        1.0   \n",
-      "2714293.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "2777534.0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
-      "\n",
-      "           2709167.0  2714293.0  2777534.0  \n",
-      "1026.0           0.0        0.0        0.0  \n",
-      "2415.0           0.0        0.0        0.0  \n",
-      "3597.0           0.0        0.0        0.0  \n",
-      "3637.0           0.0        0.0        0.0  \n",
-      "8207.0           0.0        0.0        0.0  \n",
-      "...              ...        ...        ...  \n",
-      "2704494.0        0.0        0.0        0.0  \n",
-      "2709141.0        1.0        0.0        0.0  \n",
-      "2709167.0        0.0        0.0        0.0  \n",
-      "2714293.0        0.0        0.0        0.0  \n",
-      "2777534.0        0.0        0.0        0.0  \n",
-      "\n",
-      "[1694 rows x 1694 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# # Assuming graph_simplified_df is already loaded\n",
+    "# # Step 1: Create a sorted unique company identifier\n",
+    "# graph_simplified_df['company_pair'] = graph_simplified_df.apply(\n",
+    "#     lambda row: '-'.join(sorted([str(row['boardid']), str(row['companyid'])])),\n",
+    "#     axis=1\n",
+    "# )  # 2-3 and 3-2 should be equivalent in graph_simplified_df['company']\n",
+    "\n",
+    "# # Ensure data uniqueness per director per company to avoid inflated pair counts\n",
+    "# graph_simplified_df = graph_simplified_df.drop_duplicates(subset=['company_pair', 'directorid'])\n",
+    "\n",
+    "# # Step 2 & 3: Create combinations of directors for each company, only if there are at least two directors\n",
+    "# director_pairs = graph_simplified_df.groupby('company_pair')['directorid'].apply(\n",
+    "#     lambda x: pd.DataFrame(combinations(x.unique(), 2), columns=['Director1', 'Director2']) if len(x) > 1 else pd.DataFrame(columns=['Director1', 'Director2'])\n",
+    "# ).reset_index(drop=True)\n",
+    "\n",
+    "# # Step 4: Count occurrences of each pair\n",
+    "# director_pairs = director_pairs.groupby(['Director1', 'Director2']).size().reset_index(name='weight')\n",
+    "\n",
+    "# # Step 5: Create the adjacency matrix\n",
+    "# if not director_pairs.empty:\n",
+    "#     directors = np.unique(director_pairs[['Director1', 'Director2']])\n",
+    "#     adj_matrix = pd.DataFrame(np.zeros((len(directors), len(directors))), columns=directors, index=directors)\n",
+    "\n",
+    "#     # Populate the adjacency matrix\n",
+    "#     for index, row in director_pairs.iterrows():\n",
+    "#         adj_matrix.at[row['Director1'], row['Director2']] = row['weight']\n",
+    "#         adj_matrix.at[row['Director2'], row['Director1']] = row['weight']\n",
+    "\n",
+    "#     # Ensure no self-loops\n",
+    "#     np.fill_diagonal(adj_matrix.values, 0)\n",
+    "\n",
+    "#     print(adj_matrix)\n",
+    "# else:\n",
+    "#     print(\"No director pairs were found to have shared companies.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from itertools import combinations\n",
+    "\n",
     "# Assuming graph_simplified_df is already loaded\n",
     "# Step 1: Create a sorted unique company identifier\n",
     "graph_simplified_df['company_pair'] = graph_simplified_df.apply(\n",
@@ -465,25 +437,25 @@
     "    lambda x: pd.DataFrame(combinations(x.unique(), 2), columns=['Director1', 'Director2']) if len(x) > 1 else pd.DataFrame(columns=['Director1', 'Director2'])\n",
     ").reset_index(drop=True)\n",
     "\n",
-    "# Step 4: Count occurrences of each pair\n",
-    "director_pairs = director_pairs.groupby(['Director1', 'Director2']).size().reset_index(name='weight')\n",
+    "# Step 4: Create a DataFrame of unique director pairs without counting occurrences\n",
+    "director_pairs = director_pairs.drop_duplicates().reset_index(drop=True)\n",
     "\n",
     "# Step 5: Create the adjacency matrix\n",
     "if not director_pairs.empty:\n",
     "    directors = np.unique(director_pairs[['Director1', 'Director2']])\n",
-    "    adj_matrix = pd.DataFrame(np.zeros((len(directors), len(directors))), columns=directors, index=directors)\n",
+    "    adj_matrix = pd.DataFrame(0, index=directors, columns=directors, dtype=int)\n",
     "\n",
     "    # Populate the adjacency matrix\n",
-    "    for index, row in director_pairs.iterrows():\n",
-    "        adj_matrix.at[row['Director1'], row['Director2']] = row['weight']\n",
-    "        adj_matrix.at[row['Director2'], row['Director1']] = row['weight']\n",
+    "    for _, row in director_pairs.iterrows():\n",
+    "        adj_matrix.at[row['Director1'], row['Director2']] = 1\n",
+    "        adj_matrix.at[row['Director2'], row['Director1']] = 1\n",
     "\n",
     "    # Ensure no self-loops\n",
     "    np.fill_diagonal(adj_matrix.values, 0)\n",
     "\n",
     "    print(adj_matrix)\n",
     "else:\n",
-    "    print(\"No director pairs were found to have shared companies.\")"
+    "    print(\"No director pairs were found to have shared companies.\")\n"
    ]
   },
   {
@@ -595,7 +567,13 @@
    "source": [
     "Removing the loss connection ones could be meaningful here, for workflow.\n",
     "\n",
-    "Maybe combine the results together, but just go with the binary approach here to see what could be useful."
+    "Maybe combine the results together, but just go with the binary approach here to see what could be useful.\n",
+    "\n",
+    "Have a discussion here for next steps.\n",
+    "\n",
+    "## Code analysis of approach\n",
+    "\n",
+    "To get and everything that is required."
    ]
   },
   {
