Added next steps for report writing

--- a/4. Feature_Generation/1.5.Graph_Data_Preprocessing_Results.ipynb
+++ b/4. Feature_Generation/1.5.Graph_Data_Preprocessing_Results.ipynb
@@ -1817,12 +1817,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "boarded_graph_df_with_gvkey.to_csv(\"final_data/\")"
+    "boarded_graph_df_with_gvkey.to_csv(\"final_data/boardex_graph_stats_gvkey.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
