--- a/4. Feature_Generation/1.Full_Company_Interlock_Exploration.ipynb
+++ b/4. Feature_Generation/1.Full_Company_Interlock_Exploration.ipynb
@@ -974,6 +974,7 @@
    ],
    "source": [
     "# Position nodes using the spring layout\n",
+    "G = nx.from_pandas_adjacency(adj_matrix)\n",
     "pos = nx.spring_layout(G)\n",
     "\n",
     "# Draw the graph\n",
@@ -1067,7 +1068,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
