Added stata regression testing

--- a/5.Final_report_story_telling/EDA_analysis_workflow_planning_implementation.ipynb
+++ b/5.Final_report_story_telling/EDA_analysis_workflow_planning_implementation.ipynb
@@ -773,7 +773,9 @@
     "\n",
     "Relevant topic changes over time, changes in relevant topics, most prominent topics - count these over time, and changes, over the few years, review give the topic structure\n",
     "\n",
-    "Add relevant functions for this, and do the relevant write up."
+    "Add relevant functions for this, and do the relevant write up.\n",
+    "\n",
+    "**Important: think of how to justify 4 topics later for details**"
    ]
   },
   {
