Added initial draft of EDA report

--- a/5.Final_report_story_telling/EDA_analysis_workflow_planning_implementation.ipynb
+++ b/5.Final_report_story_telling/EDA_analysis_workflow_planning_implementation.ipynb
@@ -388,7 +388,7 @@
    "source": [
     "Another approach is to use decomposition approaches for example with the SVD or eigen-decomposition of the Laplacian of these graph adjacency matrices. Here we apply the spectral clustering, which first perfoms eigen-decomposition, into a latent spaces based on the eigenvectors of the h highest eigenvalues, and then perform clustering using k-means clustering. Here this is done using the default `SpectralClustering` class from sklearn. Given that we've previously seen a global centralised grouping and more less connected groups, I set the number of clusters to 2, to see whether we can recreate these clusters.\n",
     "\n",
-    "With the visualisation below, it does not seem to be the case (in 2022 and 2023), with the main highly connected cluster connected with the "
+    "With the visualisation below, it does not seem to be the case (in 2022 and 2023), with the main highly connected cluster grouped together with the many smaller clusters. As seen with the graph density statistics, we can see that these graphs are extremely sparse, in which simple de-composition methods like SVD would not work very well. Hence the algorithm is clustering all sparse components together with everything else. This suggests that we need to create a less sparse graph, perhaps by not considering a bridging effect graph, but a simple interlocking by considering only a single common company between 2 directors."
    ]
   },
   {
@@ -604,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the standard LDA we're implementing, we need to select the optimal number of topics here for our model. For choosing topics we use the frequentist approach to select the optimal number of topics, the performance metric used is often either the perplexity score like in Blei et al (2003) or coherence score (as shown by [Stackoverflow](https://stackoverflow.com/questions/17421887/how-to-determine-the-number-of-topics-for-lda) and [Mathworks](https://uk.mathworks.com/help/textanalytics/ug/choose-number-of-topics-for-LDA-model.html)). We choose to select the optimal topics by coherence score (uncomment code below). This gave us a optimal number of 4 topics for our analysis, to train our LDA model."
+    "For the standard LDA we're implementing, we need to select the optimal number of topics here for our model. For choosing topics we use the frequentist approach to select the optimal number of topics, the performance metric used is often either the perplexity score like in Blei et al (2003) or coherence score (as shown by [Stackoverflow](https://stackoverflow.com/questions/17421887/how-to-determine-the-number-of-topics-for-lda) and [Mathworks](https://uk.mathworks.com/help/textanalytics/ug/choose-number-of-topics-for-LDA-model.html)). We choose to select the optimal topics by coherence score (uncomment code below). This gave us a optimal number of 4 topics for our analysis (exploring the number of topics between 2 to 6), to train our LDA model. Given training and hyperparameter tuning can take a long time, we load the trained model here from `lda_model/risk_lda_model.gensim`."
    ]
   },
   {
@@ -630,7 +630,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "After loading the trained model, we then analyse the information content of these topics for the risk overview by looking the topic-word distribution of each topic, generated from 2373 annual reports. This is done by analysing the most important words by weight. We can see below the weights of the most important words in of the 4 selected topics.\n",
+    "\n",
+    "Here we see that all 4 topics have some degree of overlap. For example, they all relate to the product delivery as that is the most important words in each topic, and the word \"may\" suggesting that the main risk in pharmeceutical companies is chance of not delivering. Topic 0 seems to be focussed on risks relating clincal trials with patients. Topic 1, seems to be focussed on the approval risk of clinical trials. Topic 2 seems to relate to the risks on the variety of developed products themselves, and Topic 3 relate to the reception and market performance on the developed products for these pharmceutical companies. These make sense since the main focus on pharmaceutical companies is on research and development of new drugs as new products."
+   ]
   },
   {
    "cell_type": "code",
@@ -656,7 +660,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the interpretation of our topics, we then look at the "
+    "Given the interpretation of our topics, we look at the dominant topic of each document and see whether there is meaningful clustering of these documents in these clusters. We do this using T-SNE, super-imposing the document topic matrix into a 2D plane, and displaying the dominant topic for each document.\n",
+    "\n",
+    "We can see that there is a good degree of cluster separation in the 4 clusters. This therefore shows that the document-topic distribution for each topic is meaningful, we can therefore use these for the panel regression to analyse the effect on corporate governance. In particular, we will use these dominant topics for each document (one with the highest weight) as features for each document in the panel regression."
    ]
   },
   {
@@ -956,7 +962,7 @@
    "source": [
     "### 5. Initial Regression model findings on Corporate Governance with Company Performance\n",
     "\n",
-    "As part of my final analysis, I will create 2 naive regression models to analyse factors driving company performance in biopharmaceutical firms using two panel regression analyses utilizing Random-effects Generalized Least Squares (GLS). To simplify the analysis, this will be done using Stata. Moreover I assume that Stata is the Standard Edition and installed in `/usr/local/stata18` folder. Otherwise the file path of the installed Stata programme can  can be edited in the `stata_setup.config` at the very top of the notebook file. The corresponding documentation can found on the [Stata python docs](https://www.stata.com/python/pystata18/stata.html#pystata.stata.run).\n",
+    "As part of my final analysis, I will create 2 naive regression models to analyse factors driving company performance in bio-pharmaceutical firms using two panel regression analyses utilizing Random-effects Generalized Least Squares (GLS). To simplify the analysis, this will be done using Stata. Moreover I assume that Stata is the Standard Edition and installed in `/usr/local/stata18` folder. Otherwise the file path of the installed Stata programme can  can be edited in the `stata_setup.config` at the very top of the notebook file. The corresponding documentation can found on the [Stata python docs](https://www.stata.com/python/pystata18/stata.html#pystata.stata.run).\n",
     "\n",
     "In the lines below, we do the further required data preprocessing in Stata to convert the data into panel data and run the two panel regression models. There are a few limitations to the data, there are duplicates in terms of the annual reports to companies, this is perhaps due to companies being merged or acquired in later years. We therefore need to drop duplicates by company id (`gvkey`) and financial year (`fyear`). This leaves us only around 900 companies (observations) to analyse over 2 years (2022 and 2023). Also only a subset of the variables are used for these panel models, out of all available variables for our board interlocking graph, annual report features, and financial metrics."
    ]
@@ -1033,9 +1039,9 @@
     "\n",
     "In the above model, which has an R-squared value of 0.025, assesses firm performance using \"earnings per share\" (`epsfi`) as the dependent variable. The analysis indicates a positive correlation between firm performance and the firm's sales (`sale`), which aligns with conventional business theory suggesting that higher sales volumes typically bolster profitability.\n",
     "\n",
-    "However, an unexpected result emerges from the variable representing the graph density of board interlocks (`graph_density`). Here, we observe a negative association with firm performance, implying potential drawbacks of tightly knit governance networks. While such interlocks might facilitate enhanced information exchange and resource sharing, they may also introduce conservatism and stifle innovation by overly solidifying existing networks and practices. This dynamic could potentially hinder a firm's agility and creativity, detrimentally affecting performance.\n",
+    "However, an unexpected result emerges from the variable representing the graph density of board interlocks (`graph_density`). Here, we observe a negative association with firm performance, implying potential drawbacks of tightly knit governance networks. While such interlocks might facilitate enhanced information exchange and resource sharing, they may also introduce conservatism and stifle innovation by overly solidifying existing networks and practices. This dynamic could potentially hinder a firm's adaptivity, detrimentally affecting performance.\n",
     "\n",
-    "The intriguing nature of these results warrants further exploration into the possibility of an inverted U-shaped relationship between the density of board interlocks and firm performance. This hypothesis suggests that a moderate level of interlocks could be optimal, providing benefits without the accompanying drawbacks of excessive interconnection.\n"
+    "These results requires further exploration into whether there exists an inverted U-shaped relationship between the density of board interlocks and firm performance. Such as relationship can suggest that a moderate level of interlocks could be optimal, providing benefits without the drawbacks of excessive interconnection.\n"
    ]
   },
   {
@@ -1091,11 +1097,11 @@
    "source": [
     "##### Model 2: Measuring Firm Performance by R&D Investment\n",
     "\n",
-    "Model 2 achieves an R-squared value of 0.36 and focuses on the investment into research and development as the dependent variable (`rdipa`). Contrary to expectations, the findings from this model reveal a negative influence of sales on R&D investment. This counterintuitive result might indicate firms with higher sales are potentially allocating resources towards areas other than R&D. This may be due to prioritising short-term financial gains over long-term innovation.\n",
+    "Model 2 achieves an R-squared value of 0.36 and focusses on the investment into research and development as the dependent variable (`rdipa`). Contrary to expectations, the findings from this model reveal a negative influence of sales on R&D investment. This counterintuitive result might indicate firms with higher sales are potentially allocating resources towards areas other than R&D. This may be due to prioritising short-term financial gains over long-term development.\n",
     "\n",
-    "Additionally, the impact of specific risk focus by managers, as indicated by the dummy variable `risktopic2`, is found to be negatively associated with R&D investment, compared to the reference group `risktopic4`. This outcome accentuates the complex ways in which different risk narratives, as embedded in corporate communications, shape managerial attitudes and strategic decisions regarding innovation and risk-taking.\n",
+    "Additionally, the impact of specific risk focus by managers, as indicated by the dummy variable `risktopic2`, is found to be negatively associated with R&D investment, compared to the reference group `risktopic4`. This outcome potentially highlights the complex ways in which different risk oirentations, inferred corporate communications (e.g. annual reports) impacts managerial attitudes and strategic decisions regarding company development and risk-taking.\n",
     "\n",
-    "The nuanced effects of sales and strategic risk orientation on R&D investments highlight the need for a deeper understanding of the strategic choices that drive firm behaviour in the biopharmaceutical industry. Future analyses will delve into these relationships more profoundly to decipher the strategic underpinnings and potential causal mechanisms at play.\n"
+    "These effects of sales and strategic risk orientation on R&D investments highlight for further study into the strategic choices by directors that drive firm performance in the biopharmaceutical industry."
    ]
   },
   {
