--- a/6.Dissertation_Full_EDA/prototype_adjacency_graph.ipynb
+++ b/6.Dissertation_Full_EDA/prototype_adjacency_graph.ipynb
@@ -1556,10 +1556,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NodeView((1, 'A', 2, 'B', 3, 'C'))"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.nodes() # get information on each director, and link it back, centrality and edge information as features separately\n",
+    "\n",
+    "# either from the director graph - or just look at the bi-partite approach - only linking to each director, as seen from the final created graph"
+   ]
   },
   {
    "cell_type": "code",
