--- a/8.EDA_All_Data/1.Full_Data_Query_Approach.ipynb
+++ b/8.EDA_All_Data/1.Full_Data_Query_Approach.ipynb
@@ -2669,6 +2669,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3184,29 +3191,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3121"
+       "1293"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(boardex_full_director_companies_id) ## use the boardex company id from the company network\n",
+    "len(set(us_company_id_boardex)) ## use the boardex company id from the company network\n",
     "\n",
     "## use the boardex company ids to link the company ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# us_company_id_boardex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>permco</th>\n",
+       "      <th>gvkey</th>\n",
+       "      <th>companyid</th>\n",
+       "      <th>score</th>\n",
+       "      <th>preferred</th>\n",
+       "      <th>duplicate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>35</td>\n",
+       "      <td>001259</td>\n",
+       "      <td>1362.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>216</td>\n",
+       "      <td>001602</td>\n",
+       "      <td>2068.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>250</td>\n",
+       "      <td>007799</td>\n",
+       "      <td>21659.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>250</td>\n",
+       "      <td>007799</td>\n",
+       "      <td>1651568.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>887</td>\n",
+       "      <td>012713</td>\n",
+       "      <td>584.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1317</th>\n",
+       "      <td>59662</td>\n",
+       "      <td>043287</td>\n",
+       "      <td>3684127.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1318</th>\n",
+       "      <td>59665</td>\n",
+       "      <td>043289</td>\n",
+       "      <td>3684232.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1319</th>\n",
+       "      <td>59681</td>\n",
+       "      <td>039018</td>\n",
+       "      <td>3408934.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1320</th>\n",
+       "      <td>59711</td>\n",
+       "      <td>043385</td>\n",
+       "      <td>3698691.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1321</th>\n",
+       "      <td>59712</td>\n",
+       "      <td>043555</td>\n",
+       "      <td>3596970.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1322 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      permco   gvkey  companyid  score  preferred  duplicate\n",
+       "0         35  001259     1362.0    3.0        1.0        0.0\n",
+       "1        216  001602     2068.0    1.0        1.0        0.0\n",
+       "2        250  007799    21659.0    1.0        1.0        1.0\n",
+       "3        250  007799  1651568.0    1.0        1.0        1.0\n",
+       "4        887  012713      584.0    6.0        1.0        1.0\n",
+       "...      ...     ...        ...    ...        ...        ...\n",
+       "1317   59662  043287  3684127.0    1.0        1.0        0.0\n",
+       "1318   59665  043289  3684232.0    1.0        1.0        0.0\n",
+       "1319   59681  039018  3408934.0    3.0        1.0        0.0\n",
+       "1320   59711  043385  3698691.0    1.0        1.0        0.0\n",
+       "1321   59712  043555  3596970.0    6.0        1.0        0.0\n",
+       "\n",
+       "[1322 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boardex_us_metadata_df[boardex_us_metadata_df.companyid.isin(us_company_id_boardex)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1262"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get relevant gvkeys for analysis\n",
+    "\n",
+    "# can do this kind of analysis, and run separately if needed!!\n",
+    "\n",
+    "relevant_boardex_gvkeys = boardex_us_metadata_df[boardex_us_metadata_df.companyid.isin(us_company_id_boardex)][\"gvkey\"].drop_duplicates().to_list()\n",
+    "\n",
+    "len(set(relevant_boardex_gvkeys))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3327,7 +3534,7 @@
        "[2 rows x 25 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3338,7 +3545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3346,23 +3553,23 @@
     "            f\"\"\"\n",
     "            select *\n",
     "            from wrdssec.wciklink_gvkey sec\n",
-    "            where sec.gvkey in {concatenate_to_literal(us_gvkey)};\n",
+    "            where sec.gvkey in {concatenate_to_literal(relevant_boardex_gvkeys)};\n",
     "            \"\"\"\n",
     ") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8269, 25)"
+       "(5428, 25)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3373,16 +3580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((2216,), (2020,))"
+       "((1467,), (1257,))"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3393,16 +3600,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# look at the cik reports for the companies"
+    "# look at the cik reports for the companies\n",
+    "\n",
+    "# just have 1467 companies."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3454,6 +3663,11 @@
     "\n",
     "**Got the full data planning here, just run all and get all the data that's needed**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
